--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     //Spring에서 제공해주는 유효성 검사 라이브러리 : form에서 빈 값이나 글자수 제한
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     
+    //스프링 시큐리티
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+    
     
 }
 
