--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# Local 개발시 설정 파일 (application.properties)
+# Remote 서비스를 작동할 때 설정 파일 ( application-prod.properties )
+
+# java -Dspring.profile.active=prod -jar sbb-0.0.1-SNAPSHOT.jar
+#		application-prod.properties 파일이 설정 파일이 된다.
+
 # 각 종 설정을 셋팅하는 파일
 # JDBC 셋팅, MyBatis Mapper
 # 주석 : netstat -na | more (명령프롬포트에서 이미 쓰고있는 포트 확인)
@@ -11,17 +17,40 @@ spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
 # H2 DataBase 연결 설정
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:~/local
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:~/local
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # JPA ( JPA는 H2 DB와 연결 설정, 변경사항만 업데이트됨 )
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
 spring.jpa.hibernate.ddl-auto=update
+
 # JPA 메소드를 사용할 경우 JPA가 SQL를 생성해서 DB에 저장함. (Oracle, MySQL, MSSQL...)
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+# Oracle DB 연결
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@213.0.113.137:1521:xe
+spring.datasource.username=C##HR
+spring.datasource.password=1234
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.jpa.database=oracle
+
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+
+
+
+
+
+
+
+
+
+
 
